# aos

./: .bazelignore  .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  WORKSPACE  go.mod  go.sum  go_deps.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repositories.bzl  repositories2.bzl  repositories_internal.bzl  tsconfig.json
aos/: BUILD  condition_test.cc  config.bzl  configuration.cc  configuration.fbs  configuration.h  configuration_test.cc  dump_rtprio.cc  flatbuffer_introspection.cc  flatbuffer_introspection_test.cc  flatbuffers.bzl  flatbuffers.h  flatbuffers_static.py  flatbuffers_test.cc  json_to_flatbuffer.cc  json_to_flatbuffer_test.cc  realtime.cc  realtime.h  realtime_darwin.cc  realtime_linux.cc  realtime_test.cc  sanitizers.h  stacktrace_test.cc
aos/actions/: BUILD
aos/analysis/: BUILD  log_reader_test.py  plot_data_utils.ts  py_log_reader.cc
aos/containers/: BUILD  sized_array_test.cc
aos/events/: BUILD  context.h  event_loop.cc  event_loop.h  event_loop_c.cc  event_loop_c.h  event_loop_c.py  event_loop_param_test.cc  event_loop_param_test.h  event_loop_runtime.h  event_loop_runtime.py  event_loop_runtime_test.cc  event_loop_thread_test.py  event_loop_thread_tester.cc  event_loop_thread_tester_config_source.json  event_scheduler.cc  ping.py  ping_lib.cc  pingpong_test.py  pong.py  pong_lib.cc  shm_event_loop.cc  shm_event_loop.h  shm_event_loop.py  shm_event_loop.rs  shm_event_loop_test.cc  simulated_event_loop.cc  simulated_event_loop.h  simulated_event_loop.py  simulated_event_loop.rs  simulated_event_loop_test.cc  simulated_network_bridge.cc  util.py
aos/flatbuffers/: BUILD  base.h  binary_annotator.cc  builder.h  everything.fbs  generate.bzl  static_flatbuffers.cc  static_flatbuffers_test.cc  static_vector.h  test.py
aos/ipc_lib/: BUILD  ipc_stress_test.cc  lockless_queue.cc  lockless_queue.h  lockless_queue_stepping.cc  lockless_queue_test.cc  lockless_queue_test_utils.cc  lockless_queue_test_utils.h  lockless_queue_wrap_test.cc  memory_mapped_queue.cc  multichannel_queue_racer.cc  multichannel_queue_racer.h  multichannel_queue_racer_test.cc  queue_racer.cc  robust_ownership_tracker.h
aos/libc/: BUILD  aos_strerror.cc  aos_strerror_test.cc
aos/logging/: BUILD  context.cc  dynamic_logging_test.cc  implementations_test.cc  logging.h
aos/mutex/: BUILD  mutex_test.cc
aos/network/: BUILD  message_bridge_client_lib.cc  message_bridge_retry_test.cc  message_bridge_server_lib.cc  message_bridge_server_status_test.cc  message_bridge_test.cc  message_bridge_test_lib.cc  message_bridge_test_lib.h  noncausal_timestamp_filter_test.cc  ping.cc  pong.cc  rawrtc.cc  sctp_lib.cc  sctp_perf.cc  sctp_server.cc  sctp_server.h  sctp_test.cc  timestamp_channel_test.cc  udp.cc  udp.h  udp_test.cc  web_proxy.cc
aos/scoped/: BUILD
aos/seasocks/: BUILD  gen_embedded.bzl  seasocks_logger.cc
aos/starter/: BUILD  irq_affinity.cc  irq_affinity_lib.cc  kthread.fbs  mock_starter.cc  starter_test.cc  subprocess.cc  subprocess.h  subprocess_reliable_test.cc  subprocess_test.cc
aos/stl_mutex/: BUILD
aos/testing/: BUILD  gtest_main.cc  test_shm.cc  test_shm.h
aos/time/: BUILD
aos/type_traits/: BUILD
aos/util/: BUILD  config_validator_lib.cc  config_validator_macro.bzl  file.cc  file_test.cc  foxglove_websocket_lib.cc  generate_test_log.cc  global_factory.h  log_to_mcap_lib.cc  log_to_mcap_lib_test.cc  log_to_mcap_test.py  mcap_logger.cc  proc_stat.cc  proc_stat.h  status.h  status_test.cc  top.cc  top.h  top_test.cc
build_tests/: BUILD  upstream_python_test.py
compilers/: amd64_debian_rootfs.BUILD  amd64_debian_rootfs.BUILD.template  buildify_debian_x86_image.py  buildify_yocto_image.py  orin_debian_rootfs.BUILD  orin_debian_rootfs.BUILD.template  tensorrt.BUILD
debian/: BUILD  BUILD.lz4.bazel  BUILD.nghttp2.bazel  aws_sdk.BUILD  curl.BUILD  extensions.bzl  grpc.patch  symengine.BUILD  webrtc.BUILD
documentation/: BUILD
documentation/aos/: BUILD  mkdocs_monorepo.yml
documentation/tutorials/: getting-started.md  git-and-gerrit-basics.md
frc/: BUILD  halide.bzl  halide_generator.sh
frc/analysis/: BUILD
frc/autonomous/: BUILD
frc/can_logger/: BUILD
frc/constants/: BUILD  constants_sender_test.cc
frc/control_loops/: BUILD  static_zeroing_single_dof_profiled_subsystem_test.cc
frc/control_loops/drivetrain/test_robot/: BUILD.bazel
frc/downloader/: BUILD  downloader.bzl  downloader.py
frc/estimation/: BUILD
frc/image_streamer/: BUILD
frc/imu/: BUILD
frc/imu_fdcan/: BUILD  can_translator_lib_test.cc  dual_imu_blender_lib_test.cc
frc/imu_reader/: BUILD
frc/input/: BUILD
frc/math/: BUILD
frc/orin/: BUILD  cuda_april_tag_test.cc  resize_normalize_test.cc  undistort_test.cc
frc/shooter_interpolation/: BUILD
frc/solvers/: BUILD  convex.h  sparse_convex.cc
frc/vision/: BUILD  README.md  calibration_accumulator.cc  camera_constants.fbs  camera_reader_main.cc  camera_settings.fbs  charuco_lib.cc  charuco_lib.h  constants.jinja2.json  coral_detection.fbs  field_side_exposure_adjuster.cc  foxglove_image_converter_lib.h  foxglove_image_converter_test.cc  game_piece_locations.fbs  game_piece_mapper.cc  image_dump.cc  image_dump_cli.cc  image_logger.cc  intrinsics_calibration_lib.cc  intrinsics_calibration_test.cc  network_tables_publisher.cc  single_node_camera_config.json  target_map.fbs  target_mapper.cc  turbojpeg_decoder.cc  v4l2_reader.cc  yolo.cc
frc/wpilib/: BUILD  imu_plot_utils.ts  loop_output_handler_test.cc
frc/www/: BUILD  starter_handler.ts
frc/zeroing/: BUILD
motors/: BUILD
motors/big/: BUILD
motors/core/: BUILD
motors/peripheral/: BUILD
motors/pistol_grip/: BUILD
motors/print/: BUILD
motors/python/: BUILD
motors/seems_reasonable/: BUILD
motors/teensy_loader_cli/: BUILD
motors/usb/: BUILD
tools/: bazel  dependency_rewrite
tools/actions/: BUILD
tools/build_rules/: BUILD  autocxx.bzl  clean_dep.bzl  foxglove.bzl  js.bzl  mkdocs.bzl  template.bzl
tools/ci/: buildkite.yaml  extensions.bzl  repo_defs.bzl
tools/cpp/: BUILD  extensions.bzl  toolchain_config.bzl  (+1 more)
(+237 files in other folders)
